# DayLight

./: .gitignore  .tags  CMakeLists 2.txt  CMakeLists.txt  CMakeLists2.txt  DayLight.pro  LICENSE.txt  Makefile  README.md  TODO  imgui.ini  index.html  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  makefile  oglwidget.cpp  oglwidget.h  windowmanager.ui
.d/: Edge.d
GLSL/: bbox_shader.frag  bbox_shader.vert  depth.frag  depth.vert  gen_data.frag  mask.frag  mesh_shader.frag  multilight_shader.frag  multilight_shader.vert  rotate.NONE  shader.frag  shader.vert  simple.vert_  wired_frame_shader.frag  wired_frame_shader.vert
Include/: AEL.h  ArrayBuffer.h  CVM.h  Cabinet.h  Camera.h  Color.h  Config.h  Countable.h  Curve.h  Edge.h  Ellipsoid.h  Extern.h  Face.h  GLObject.h  GL_include.h  Geometry.h  Include.pro  Index.h  Instance.h  Keyboard.h  Light.h  Line.h  Makefile  Matrix.h  Mesh.h  ModelAsset.h  Mouse.h  Object.h  OpenGlOffscreenSurface.h  OrthoView.h  PhysicalWorld.h  Program.h  Renderer.h  Shader.h  Shader.h.autosave  Shaper.h  TextView.h  Transformable.h  Utility.h  Vector.h  (+4 more)
Includes/: .Face.h.swp  ArrayBuffer.h  Camera.h  Color.h  ColorTexBuffer.h  Config.h  Countable.h  DepthTexBuffer.h  EventCatcher.h  Extern.h  Face.h  FrameBuffer.h  FrameBuffer_base.h  GLObject.h  GL_include.h  InputParser.h  Instance.h  Keyboard.h  Light.h  Material.h  Mesh.h  ModelAsset.h  MultisampledColorTexBuffer.h  MultisampledDepthTexBuffer.h  MultisampledFrameBuffer.h  PerspectiveView.h  PhysicalWorld.h  Program.h  Shader.h  Shaper.h  TextView.h  Texture.h  Texture2D.h  Texure2D.h  Transformable.h  Utility.h  View.h  View_bullet.h  View_renderer.h  Widget.h  (+4 more)
Input/: Keyboard.cpp  Mouse.cpp
Internal/: ArrayBuffer.cpp  Camera.cpp  Camera.cpp.autosave  Countable.cpp  Curve.cpp  Edge.cpp  Ellipsoid.cpp  Face.cpp  Geometry.cpp  Geometry.cpp.autosave  Instance.cpp  Light.cpp  Line.cpp  Mesh.cpp  ModelAsset.cpp  Object.cpp  OpenGlOffscreenSurface.cpp  PhysicalWorld.cpp  Program.cpp  Shader.cpp  Shaper.cpp  Shaper.cpp.autosave  Transformable.cpp  Vector.cpp  makefile
Output/: CVM.cpp  Cabinet.cpp  OrthoView.cpp  Renderer.cpp  TextView.cpp  View.cpp  View.cpp.autosave  View_bullet.cpp  View_renderer.cpp  WindowManager.cpp  makefile
Utility/: AEL.cpp  Color.cpp  (+5 more)
example/: CMakeLists.txt
experiment/: CMakeCache.txt  CMakeLists.txt  DayLight  cmake_install.cmake  egl.cpp  egl_example.cpp  glbinding-config.cmake  glx.cpp  headless_x11.cpp  main.cpp  test
experiment/GLSL/: mask.frag
experiment/Includes/: ArrayBuffer.h  CImg.h  Cabinet.h  Camera.h  Config.h  Extern.h  Face.h  GL_include.h  Instance.h  Keyboard.h  Light.h  ModelAsset.h  OpenGlOffscreenSurface.h  PhysicalWorld.h  Program.h  Shader.h  Utility.h  View.h  View_bullet.h  View_renderer.h  WindowManager.h  WindowManager_headless.h  obj_loader.h
experiment/backup/: Makefile  gl3  main.cpp  quad  quad.c  runWithoutGUI.sh
experiment/src/: elg2.cpp  glfw.cpp  main.cpp
experiment/src/Internal/: Camera.cpp  Mesh.cpp  OpenGlOffscreenSurface.cpp  btDebugDrawer.cpp
experiment/src/Lumos/: ArrayBuffer.cpp  Instance.cpp  ModelAsset.cpp  Program.cpp  Shader.cpp
experiment/src/Output/: Renderer.cpp  View.cpp  View_bullet.cpp  View_renderer.cpp  WindowManager.cpp  WindowManager_base.cpp  WindowManager_headless.cpp
experiment/src/Patronus/: Mesh.cpp  Shaper.cpp
experiment/src/Utility/: Color.cpp  Utility.cpp
libs/GLoader/: CMakeLists.txt
libs/GLoader/gl3w/: gl3w.c  gl3w.h
libs/imGui/: CMakeLists.txt
src/Common/: CMakeLists.txt  Color.cpp  Color.h  Config.cpp  Config.h  Exception.h  Extern.h  GL_include.h  Utility.cpp  Utility.h
src/DayLightViewer/: CMakeLists.txt  Canvas.cpp  Canvas.h  Window.cpp  Window.h  imgui_impl_opengl3.cpp  main.cpp
src/DayLightViewer/IO/: EventCatcher.h  Port.cpp  Port.h
src/DaylightViewer/: CMakeLists.txt  Canvas.cpp  Canvas.h  WindowManagerImgui.cpp  WindowManagerImgui.h  imgui.ini  main.cpp
src/IO/: CMakeLists.txt  EventCatcher.cpp  EventCatcher.h  PerspectiveView.cpp  PerspectiveView.h  View.cpp  View.h  View_bullet.cpp  View_bullet.h  View_renderer.cpp  View_renderer.h  Widget.cpp  Widget.h  WindowManager.cpp  WindowManager.h  WindowManagerX11.cpp  WindowManagerX11.h  WindowManager_base.cpp  btDebugDrawer.cpp  btDebugDrawer.h
src/IO/Event/: CursorEvent.cpp  CursorEvent.h  KeyboardEvent.h
src/Lumos/: ArrayBuffer.cpp  ArrayBuffer.h  CMakeLists.txt  ColorTexBuffer.cpp  ColorTexBuffer.h  CopyFile.cmake  Countable.cpp  DepthTexBuffer.cpp  DepthTexBuffer.h  FrameBuffer.cpp  FrameBuffer.h  FrameBuffer_base.cpp  FrameBuffer_base.h  GLObject.cpp  GLObject.h  GlslNameConst.h  IFrameBuffer.cpp  IFrameBuffer.h  Instance.cpp  Instance.h  Material.cpp  Material.h  ModelAsset.cpp  ModelAsset.h  MultisampledColorTexBuffer.cpp  MultisampledColorTexBuffer.h  MultisampledDepthTexBuffer.cpp  MultisampledDepthTexBuffer.h  MultisampledFrameBuffer.cpp  MultisampledFrameBuffer.h  Program.cpp  Program.h  Shader.cpp  Shader.h  ShadingPipe.cpp  ShadingPipe.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  (+1 more)
src/Lumos/Glsl/: Blinn-Phong.frag  Blinn-Phong.vert  depth.vert  mask.vert  mesh_shader.vert  multilight_shader.frag
src/Lumos/RenderPass/: IRenderPass.h  ShadowMap.cpp  ShadowMap.h
src/Output/: CMakeLists.txt  EventCatcher.cpp  PerspectiveView.cpp  PerspectiveView.h  View.cpp  View_bullet.cpp  View_renderer.cpp  View_renderer.h  Widget.cpp  Widget.h  WindowManager.cpp  WindowManager.h  WindowManager_base.cpp  WindowManager_base.h  WindowManager_headless.cpp  btDebugDrawer.cpp  btDebugDrawer.h
src/Output/Input/: CursorEvent.cpp  CursorEvent.h  MouseEvent.h
src/Patronus/: CMakeLists.txt  Camera.cpp  Camera.h  DirectionalLight.cpp  DirectionalLight.h  Face.cpp  Face.h  ILight.h  Instance.cpp  Instance.h  Light.cpp  Light.h  LightFactory.cpp  LightFactory.h  Mesh.cpp  Mesh.h  PhysicalWorld.cpp  PhysicalWorld.h  PointLight.cpp  PointLight.h  Shaper.cpp  Shaper.h  Transformable.cpp  Transformable.h
src/Utility/: CMakeLists.txt  Color.cpp  Config.cpp  Func.h  InputParser.cpp  Utility.cpp  diff.sh
(+121 files in other folders)
